--- a/package.json
+++ b/package.json
@@ -1,23 +1,9 @@
 {
-  "name": "threejs-journey-exercise",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "deploy": "vercel --prod"
+    "dev": "streamlit run ."
   },
-  "builds": {
-    "src": "src/PDF-Chatbot_v2.py",
-    "use": "@vercel/python"
-  },
+
   "devDependencies": {
-    "vite": "^4.5.0"
-  },
-  "dependencies": {
-    "lil-gui": "^0.19.0",
-    "three": "^0.158.0",
-    "vercel": "^33.0.1"
+    "streamlit": "^1.10.0"
   }
 }
